2011-03-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrintPanel.m:
	* Printing/GSCUPS/GSCUPSPrintOperation.m:
	* Printing/GSLPR/GSLPRPrintOperation.m: Allow saving a print
	job as a PDF.

2011-03-13  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSpellChecker.m (-_findNext:, -_learn:, -_forget:,
	-_ignore:, -_guess:, -_correct:, -_switchDictionary:,
	-_highlightGuess:): Change action methods to return no result.

2011-03-13  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSSpellChecker.m (-init, -dealloc): Fix nasty
	retain/release error, which could crash applications after
	changing the spell checker language in the spelling panel.

2011-03-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWorkspace.m (-iconForFile:): Remove unused local variable.
	* Source/GSGormLoading.m (gmodel_class): Remove useless assignment.
	* Source/NSTextBlock.m
	(-drawBackgroundWithFrame:...layoutManager:): Use the correct variables.
	* Source/NSRulerMarker.m (-trackMouse:adding:): Remove unused variable.
	* ColorPickers/GSNamedColorPicker.m (-setColor:): Add missing
	implementation.
	* ColorPickers/GSStandardColorPicker.m (-_showNewPicker:),
	* Source/GSToolbarCustomizationPalette.m (-layout),
	* Source/NSTableView.m (-sizeToFit),
	* Source/NSApplication.m (-finishLaunching),
	* Source/GSGormLoading.m (GSNibContainer-awakeWithContext:),
	* Source/NSMenu.m (-sizeToFit),
	* Source/NSSplitView.m (-mouseDown:),
	* Source/NSBrowser.m (-setLastColumn:),
	* Source/NSPrintOperation.m (-deliverResult):
	Removed dead assignments found by static code analyser.

2011-03-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMatrix.m (_shiftModifier:): Use correct column index
	for old cell.
	* Headers/AppKit/NSCursor.h
	* gui/Source/NSCursor.m: Add Mac 10.6 methods and implement keyed
	coding/decoding properly.
	* Images/nsmapping.strings: Add mappings for some new cursors.

2011-03-11  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSLayoutManager.m:
	* Source/externs.m: